--- a/index.html
+++ b/index.html
@@ -45,7 +45,24 @@
             <img src="./images/img-about.jpg" alt="beauty girl" />
         </div>
     </section>
+    <section class="sections box-01"><div class="overlay"></div><div class="text-section"><h2><a href="#">exclusive content</a></h2></div></section>
+    <section class="sections box-02"><div class="overlay"></div><div class="text-section"><h2><a href="#">girl prettylittlething</a></h2></div></section>
+    <section class="sections box-03"><div class="overlay"></div><div class="text-section"><h2><a href="#">girl spotify</a></h2></div></section>
+    <section class="sections box-04"><div class="overlay"></div><div class="text-section"><h2><a href="#">Gallery</a></h2></div></section>
+    
 
+    <footer id="footer">
+           <div><h1 class="logo-title">beauty girl</h1></div>
+           <div class="links-distraction">   
+                <ul class="list-list__ul">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="far fa-envelope"></i></a></li>
+                </ul>
+           </div>
+           <div class="copyright">&copy2021 beauty girl</div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
